# OpenCV

./: .cproject  .gitignore  .project  CMakeLists.txt  Example
src/: BackProjectionExample.cpp  DrawBubble.cpp  Example.cpp  FilterRedWebcam.cpp  FindColourObjectFile.cpp  FindColourObjectWebcam.cpp  HistExample.cpp  ShowWebcam.cpp
